# beebeebike

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  DEPLOY.md  IDEA.md  IDEA2.md  Makefile  README.md  compose.dev.yml  compose.glitchtip.yml  compose.prod.yml  compose.yml  glitchtip-env-example  justfile
.github/workflows/: cd.yml  ci-mobile.yml  ci.yml  flutter-plugin.yml  lint.yml  publish.yml  refresh-data.yml  test.yml
backend/: Cargo.toml  Dockerfile  graphhopper.Dockerfile  graphhopper_config.yml
backend/custom_models/: beebeebike.json
backend/migrations/: 001_create_users.sql  002_create_sessions.sql  003_create_rated_areas.sql  004_add_anonymous_users.sql  005_create_user_locations.sql  006_create_paint_events.sql  007_make_geometries_valid.sql  008_create_rated_areas_baseline.sql
backend/src/: auth.rs  bbox.rs  config.rs  errors.rs  geocode.rs  lib.rs  locations.rs  main.rs  ratings.rs  ratings_events.rs  routing.rs
backend/tests/: integration.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
infra/: setup-sudo.sh  update-nginx.sh
mobile/: README.md  analysis_options.yaml  pubspec.yaml
or-cli/: Cargo.toml
or-domain/: Cargo.toml
or-ffi/: Cargo.toml  build.rs
or-ffi/src/: lib.rs  or_ffi.udl
or-runtime/: Cargo.toml
scripts/: download_berlin_osm.sh  download_berlin_tiles.sh  gen-uniffi.sh
server/: docker-compose.yml  setup-sudo.sh  update-nginx.sh
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.setup.js
(+267 files in other folders)
