[package]
name = "beebeebike-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
geojson = "0.24"
geo = "0.29"
dotenvy = "0.15"
urlencoding = "2"
async-stream = "0.3"
futures-util = "0.3"

[dev-dependencies]
axum-test = "20"
wiremock = "0.6"
