[package]
name = "or-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
or-domain = { path = "../or-domain" }
uniffi = { version = "0.27", features = ["cli"] }
async-std = { version = "1.12", features = ["attributes"] }

[build-dependencies]
uniffi = { version = "0.27", features = ["build"] }
